[package]
name = "editorus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm =  "0.27.0"
fern = "0.6.2"
log = "0.4.21"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "rope_insertion"
harness = false

[[bench]]
name = "rope_traversal"
harness = false

[[bench]]
name = "node_from"
harness = false
